# DevCeph

./: 01存储开源库介绍和使用  README.md  ceph常用命令  ceph架构介绍  ceph编译  libradosstriper详解  librados详解  librbd各个模块原理详解  librbd详解  mds详解  mgr详解  msg详解  neorados介绍  rbd_fuse详解  rbd_replay详解
ceph-rbd-mon/: .gitignore  CMakeLists.txt  build.sh  ceph-rbd-mon.pc.in
ceph-rbd-mon/examples/: CMakeLists.txt  main.cc
ceph-rbd-mon/src/: CMakeLists.txt
ceph-rbd-mon/src/common/: AsyncOpTracker.cc  AsyncOpTracker.h  AsyncReserver.h  BackTrace.cc  BackTrace.h  CDC.cc  CDC.h  CMakeLists.txt  Checksummer.h  Clock.h  CommandTable.h  Cond.h  ConfUtils.cc  ConfUtils.h  ContextCompletion.cc  ContextCompletion.h  Continuation.h  Cycles.cc  Cycles.h  DecayCounter.cc  DecayCounter.h  EventTrace.cc  EventTrace.h  FastCDC.cc  FastCDC.h  Finisher.cc  Finisher.h  FixedCDC.cc  FixedCDC.h  Formatter.cc  Formatter.h  Graylog.cc  Graylog.h  HBHandle.h  HTMLFormatter.cc  HTMLFormatter.h  HeartbeatMap.cc  HeartbeatMap.h  Initialize.h  Journald.cc  (+253 more)
ceph-rbd-mon/src/common/async/: bind_handler.h  bind_like.h  blocked_completion.h  completion.h  context_pool.h  forward_handler.h  librados_completion.h  shared_mutex.h  waiter.h  yield_context.h
ceph-rbd-mon/src/common/detail/: construct_suspended.h
ceph-rbd-mon/src/common/options/: CMakeLists.txt  build_options.cc  build_options.h  ceph-exporter.yaml.in  cephfs-mirror.yaml.in  crimson.yaml.in  global.yaml.in  immutable-object-cache.yaml.in  legacy_config_opts.h  mds-client.yaml.in  mds.yaml.in  mgr.yaml.in  mon.yaml.in  osd.yaml.in  rbd-mirror.yaml.in  rbd.yaml.in  rgw.yaml.in  validate-options.py  y2c.py
ceph-rbd-mon/src/common/win32/: SubProcess.cc  blkdev.cc  code_page.rc  dlfcn.cc  dns_resolve.cc  errno.cc  event_logging.mc  ifaddrs.cc  registry.cc  registry.h  service.cc  service.h  syslog.cc  wstring.cc  wstring.h
ceph-rbd-mon/src/include/: CMakeLists.txt  CompatSet.h  Context.h  Distribution.h  acconfig.h  addr_parsing.h  alloc_ptr.h  any.h  blobhash.h  btree_map.h  buffer.h  buffer_fwd.h  buffer_raw.h  byteorder.h  ceph_assert.h  ceph_features.h  ceph_fs.h  ceph_fuse.h  ceph_hash.h  common_fwd.h  compact_map.h  compact_set.h  compat.h  coredumpctl.h  counter.h  cpp_lib_backport.h  crc32c.h  demangle.h  denc.h  dlfcn_compat.h  elist.h  encoding.h  err.h  event_type.h  expected.hpp  filepath.h  frag.h  fs_types.h  function2.hpp  health.h  (+37 more)
ceph-rbd-mon/src/include/cpp-btree/: btree.h  btree_container.h  btree_map.h  btree_set.h
ceph-rbd-mon/src/include/neorados/: RADOS.hpp  RADOS_Decodable.hpp
ceph-rbd-mon/src/include/rados/: librados.h  librados.hpp  librados_fwd.hpp  librgw.h  objclass.h  rados_types.h  rados_types.hpp  rgw_file.h
ceph-rbd-mon/src/include/radosstriper/: libradosstriper.h  libradosstriper.hpp
ceph-rbd-mon/src/include/rbd/: features.h  librbd.h  librbd.hpp  object_map_types.h
ceph-rbd-mon/src/include/win32/: dlfcn.h  fs_compat.h  ifaddrs.h  poll.h  syslog.h  win32_errno.h  winioctl_compat.h  winsock_compat.h  winsock_wrapper.h
ceph-rbd-mon/src/librados/: AioCompletionImpl.h  CMakeLists.txt  IoCtxImpl.cc  IoCtxImpl.h  ListObjectImpl.h  ObjectOperationImpl.h  PoolAsyncCompletionImpl.h  RadosClient.cc  RadosClient.h  RadosXattrIter.cc  RadosXattrIter.h  librados_asio.h  librados_c.cc  librados_c.h  librados_cxx.cc  librados_tp.cc  librados_util.cc  librados_util.h  snap_set_diff.cc  snap_set_diff.h
ceph-rbd-mon/src/libradosstriper/: CMakeLists.txt  MultiAioCompletionImpl.cc  MultiAioCompletionImpl.h  RadosStriperImpl.cc  RadosStriperImpl.h  libradosstriper.cc
ceph-rbd-mon/src/librbd/: AsioEngine.cc  AsioEngine.h  AsyncObjectThrottle.cc  AsyncObjectThrottle.h  AsyncRequest.cc  AsyncRequest.h  BlockGuard.h  CMakeLists.txt  ConfigWatcher.cc  ConfigWatcher.h  DeepCopyRequest.cc  DeepCopyRequest.h  ExclusiveLock.cc  ExclusiveLock.h  Features.cc  Features.h  ImageCtx.cc  ImageCtx.h  ImageState.cc  ImageState.h  ImageWatcher.cc  ImageWatcher.h  Journal.cc  Journal.h  LibrbdAdminSocketHook.cc  LibrbdAdminSocketHook.h  ManagedLock.cc  ManagedLock.h  MirroringWatcher.cc  MirroringWatcher.h  ObjectMap.cc  ObjectMap.h  Operations.cc  Operations.h  PluginRegistry.cc  PluginRegistry.h  TaskFinisher.h  TrashWatcher.cc  TrashWatcher.h  Types.h  (+9 more)
ceph-rbd-mon/src/librbd/api/: Config.cc  Config.h  DiffIterate.cc  DiffIterate.h  Group.cc  Group.h  Image.cc  Image.h  Io.cc  Io.h  Migration.cc  Migration.h  Mirror.cc  Mirror.h  Namespace.cc  Pool.cc  (+10 more)
ceph-rbd-mon/src/messages/: MAuth.h  MAuthReply.h  MBackfillReserve.h  MCacheExpire.h  MClientCapRelease.h  MClientCaps.h  MClientLease.h  MClientMetrics.h  MClientQuota.h  MClientReclaim.h  MClientReclaimReply.h  MClientReconnect.h  MClientReply.h  MClientRequest.h  MClientRequestForward.h  MClientSession.h  MClientSnap.h  MCommand.h  MCommandReply.h  MConfig.h  MDentryLink.h  MDentryUnlink.h  MDirUpdate.h  MDiscover.h  MDiscoverReply.h  MExportCaps.h  MExportCapsAck.h  MExportDir.h  MExportDirAck.h  MExportDirCancel.h  MExportDirDiscover.h  MExportDirDiscoverAck.h  MExportDirFinish.h  MExportDirNotify.h  MExportDirNotifyAck.h  MExportDirPrep.h  MExportDirPrepAck.h  MFSMap.h  MFSMapUser.h  MForward.h  (+132 more)
ceph-rbd-mon/src/mon/: AuthMonitor.cc  AuthMonitor.h  CMakeLists.txt  CommandHandler.cc  CommandHandler.h  ConfigMap.cc  ConfigMap.h  ConfigMonitor.cc  ConfigMonitor.h  ConnectionTracker.cc  ConnectionTracker.h  CreatingPGs.h  ElectionLogic.cc  ElectionLogic.h  Elector.cc  Elector.h  FSCommands.cc  FSCommands.h  HealthMonitor.cc  HealthMonitor.h  KVMonitor.cc  KVMonitor.h  LogMonitor.cc  LogMonitor.h  MDSMonitor.cc  MDSMonitor.h  MgrMap.h  MgrMonitor.cc  MgrMonitor.h  MgrStatMonitor.cc  MgrStatMonitor.h  MonCap.cc  MonCap.h  MonClient.cc  MonClient.h  MonCommand.h  MonCommands.h  MonMap.cc  MonMap.h  MonOpRequest.h  (+21 more)
ceph-rbd-mon/src/msg/: CMakeLists.txt  Connection.cc  Connection.h  DispatchQueue.cc  DispatchQueue.h  Dispatcher.h  Message.cc  Message.h  MessageRef.h  Messenger.cc  Messenger.h  Policy.h  SimplePolicyMessenger.h  compressor_registry.cc  compressor_registry.h  msg_fmt.h  msg_types.cc  msg_types.h
(+532 files in other folders)
